fixed weird alignment when saving as pdf

--- a/finalimage.css
+++ b/finalimage.css
@@ -3,6 +3,10 @@ html {
     font-size: 16px;
 }
 
+body, p {
+    margin:0;
+}
+
 .container {
     position: relative;
 }
